Bootstrap plugin integrations

--- a/less/style.less
+++ b/less/style.less
@@ -50,8 +50,8 @@
 
 @import (inline) "../bower_components/bootstrap-select/bootstrap-select.css";
 @import "../bower_components/bootstrap-switch/src/less/bootstrap3/bootstrap-switch.less";
-@import "../bower_components/bootstrap-tagsinput/src/bootstrap-tagsinput.less";
-@import "../bower_components/bootstrap-datepicker/less/datepicker3.less";
+@import "tagsinput.less";
+@import "datepicker.less";
 @import "datatables.less";
 
 // Utility classes
