--- a/less/style.less
+++ b/less/style.less
@@ -41,6 +41,7 @@
 @import "../bower_components/bootstrap/less/close.less";
 
 @import "../bower_components/font-awesome/less/font-awesome.less";
+@import "../bower_components/jasny-bootstrap/less/jasny-bootstrap.less";
 
 // Components w/ JavaScript
 @import "../bower_components/bootstrap/less/modals.less";
