Bootstrap moved to lib

--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -6,7 +6,7 @@
 		</footer>
 	</div>
 
-	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/lib/bootstrap.min.js"></script>
 
 </body>
 </html>
