--- a/src/admin/layout/footer.html
+++ b/src/admin/layout/footer.html
@@ -2,7 +2,7 @@
 	<script src="../assets/js/lib/jquery-migrate.min.js"></script>
 	<script src="../assets/js/lib/ckeditor/ckeditor.js"></script>
 	<script src="../assets/js/lib/ckeditor/adapters/jquery.js"></script>
-	<script src="../assets/js/bootstrap.min.js"></script>
+	<script src="../assets/js/lib/bootstrap.min.js"></script>
 	<script src="../assets/js/lib/moment-with-langs.min.js"></script>
 	<script src="../assets/js/lib/jquery.dataTables.min.js"></script>
 	<script src="../assets/js/lib/datatables.js"></script>
