--- a/src/admin/layout/header.html
+++ b/src/admin/layout/header.html
@@ -23,14 +23,14 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="http://fuel.localhost/admin">Indigo Admin</a>
-			<a class="navbar-brand" href="http://fuel.localhost/"><small>back to site &raquo;</small></a>
+			<a class="navbar-brand" href="">Indigo Admin</a>
+			<a class="navbar-brand" href=""><small>back to site &raquo;</small></a>
 		</div>
 		<div class="hidden-xs">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
 					<a href="" class="account dropdown-toggle" data-toggle="dropdown">
-						<span class="menu-gravatar" style="background-image:url(https://secure.gravatar.com/avatar/5c2d0d0b4cd3457db67aefcf03fd0d01?s=30&amp;d=mm)"></span>
+						<span class="menu-gravatar" style="background-image:url(https://secure.gravatar.com/avatar/5c2d0d0b4cd3457db67aefcf03fd0d00?s=30&amp;d=mm)"></span>
 						<span class="user-and-welcome-wrapper">
 							<small class="welcome-text">welcome,</small>
 							<span class="username">System administrator</span>
@@ -38,9 +38,9 @@
 						<b class="caret"></b>
 					</a>
 					<ul class="dropdown-menu">
-						<li><a href="http://fuel.localhost/admin/profile">Profile</a></li>
+						<li><a href="">Profile</a></li>
 						<li class="divider"></li>
-						<li><a href="http://fuel.localhost/admin/logout">Sign out</a></li>
+						<li><a href="">Sign out</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -60,15 +60,15 @@
 									<b class="caret"></b>
 								</button>
 								<ul class="collapse" id="account-menu">
-									<li><a href="http://fuel.localhost/admin/profile">Profile</a></li>
-									<li><a href="http://fuel.localhost/admin/logout">Sign out</a></li>
+									<li><a href="">Profile</a></li>
+									<li><a href="">Sign out</a></li>
 								</ul>
 							</li>
 						</ul>
 					</div><!-- /.visible-xs -->
 					<ul class="primary" >
 						<li>
-							<a href="http://fuel.localhost/admin/">
+							<a href="">
 								<span class="glyphicon glyphicon-dashboard"></span>
 								<span class="label label-primary pull-right"></span>
 								Dashboard
@@ -83,13 +83,13 @@
 							</button>
 							<ul class="collapse" id="menu-2">
 								<li>
-									<a href="http://fuel.localhost/admin/auth">
+									<a href="">
 										<span class="label label-primary pull-right"></span>
 										Users
 									</a>
 								</li>
 								<li>
-									<a href="http://fuel.localhost/admin/auth/permissions">
+									<a href="">
 										<span class="label label-primary pull-right"></span>
 										Permissions
 									</a>
@@ -97,14 +97,14 @@
 							</ul>
 						</li>
 						<li>
-							<a href="http://fuel.localhost/admin/warranty">
+							<a href="">
 								<span class="glyphicon glyphicon-wrench"></span>
 								<span class="label label-primary pull-right"></span>
 								Warranty
 							</a>
 						</li>
 						<li>
-							<a href="http://fuel.localhost/admin/wisecrack">
+							<a href="">
 								<span class="fa fa-quote-right"></span>
 								<span class="label label-primary pull-right"></span>
 								Wisecrack
@@ -119,13 +119,13 @@
 							</button>
 							<ul class="collapse" id="menu-5">
 								<li>
-									<a href="http://fuel.localhost/admin/themes">
+									<a href="">
 										<span class="label label-primary pull-right"></span>
 										Themes
 									</a>
 								</li>
 								<li>
-									<a href="http://fuel.localhost/admin/enum">
+									<a href="">
 										<span class="label label-primary pull-right"></span>
 										Enums
 									</a>
