Bower update, datatable update, added list to admin, minor fixes

--- a/src/admin/layout/header.html
+++ b/src/admin/layout/header.html
@@ -97,20 +97,6 @@
 							</ul>
 						</li>
 						<li>
-							<a href="">
-								<span class="glyphicon glyphicon-wrench"></span>
-								<span class="label label-primary pull-right"></span>
-								Warranty
-							</a>
-						</li>
-						<li>
-							<a href="">
-								<span class="fa fa-quote-right"></span>
-								<span class="label label-primary pull-right"></span>
-								Wisecrack
-							</a>
-						</li>
-						<li>
 							<button data-toggle="collapse" data-target="#menu-5">
 								<span class="fa fa-cogs"></span>
 								<span class="label label-primary pull-right"></span>
@@ -135,8 +121,8 @@
 					</ul>
 				</div> <!-- /.side-navigation-wrapper -->
 				<div class="side-navigation-footer">
-					Aucsa
 				</div>
 			</nav>
 		</div><!--/.nav-collapse -->
 	</div>
+	<div class="content-wrap">
