--- a/less/datatables.less
+++ b/less/datatables.less
@@ -22,6 +22,18 @@ table.table {
 	max-width: none !important;
 }
 
+// table.dataTable,
+// table.dataTable thead,
+// table.dataTable tfoot,
+// table.dataTable tbody,
+// table.dataTable td,
+// table.dataTable tr,
+// table.dataTable th {
+// 	-webkit-box-sizing: content-box !important;
+// 	-moz-box-sizing: content-box !important;
+// 	box-sizing: content-box !important;
+// }
+
 table.table thead .sorting,
 table.table thead .sorting_asc,
 table.table thead .sorting_desc,
@@ -31,12 +43,12 @@ table.table thead .sorting_desc_disabled {
 	*cursor: hand;
 }
 
-table.table thead .sorting { background: url('img/sort_both.png') no-repeat center right; }
-table.table thead .sorting_asc { background: url('img/sort_asc.png') no-repeat center right; }
-table.table thead .sorting_desc { background: url('img/sort_desc.png') no-repeat center right; }
+table.table thead .sorting { background: url('../img/sort_both.png') no-repeat center right; }
+table.table thead .sorting_asc { background: url('../img/sort_asc.png') no-repeat center right; }
+table.table thead .sorting_desc { background: url('../img/sort_desc.png') no-repeat center right; }
 
-table.table thead .sorting_asc_disabled { background: url('img/sort_asc_disabled.png') no-repeat center right; }
-table.table thead .sorting_desc_disabled { background: url('img/sort_desc_disabled.png') no-repeat center right; }
+table.table thead .sorting_asc_disabled { background: url('../img/sort_asc_disabled.png') no-repeat center right; }
+table.table thead .sorting_desc_disabled { background: url('../img/sort_desc_disabled.png') no-repeat center right; }
 
 table.dataTable th:active {
 	outline: none;
@@ -70,6 +82,30 @@ div.dataTables_scrollFoot table {
 }
 
 
+/* Frustratingly the border-collapse:collapse used by Bootstrap makes the column
+   width calculations when using scrolling impossible to align columns. We have
+   to use separate
+ */
+table.table-bordered.dataTable {
+	border-collapse: separate !important;
+}
+table.table-bordered thead th,
+table.table-bordered thead td {
+	border-left-width: 0;
+	border-top-width: 0;
+}
+table.table-bordered tbody th,
+table.table-bordered tbody td {
+	border-left-width: 0;
+	border-bottom-width: 0;
+}
+table.table-bordered th:last-child,
+table.table-bordered td:last-child {
+	border-right-width: 0;
+}
+div.dataTables_scrollHead table.table-bordered {
+	border-bottom-width: 0;
+}
 
 
 /*
