--- a/less/style.less
+++ b/less/style.less
@@ -50,7 +50,7 @@
 @import "../bower_components/bootstrap/less/carousel.less";
 
 @import (inline) "../bower_components/bootstrap-select/bootstrap-select.css";
-@import "../bower_components/bootstrap-switch/src/less/bootstrap3/bootstrap-switch.less";
+@import (inline) "../bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css";
 @import "tagsinput.less";
 @import "datepicker.less";
 @import "datatables.less";
