--- a/src/admin/layout/footer.html
+++ b/src/admin/layout/footer.html
@@ -1,18 +1,23 @@
+		<footer class="content-wrap-footer">
+			<hr>
+			© 2013 Indigo Admin by <a href="https://github.com/indigophp">Indigo</a>
+		</footer>
+	</div>
 	<script src="../assets/js/lib/jquery.min.js"></script>
 	<script src="../assets/js/lib/jquery-migrate.min.js"></script>
 	<script src="../assets/js/lib/ckeditor/ckeditor.js"></script>
 	<script src="../assets/js/lib/ckeditor/adapters/jquery.js"></script>
 	<script src="../assets/js/lib/bootstrap.min.js"></script>
 	<script src="../assets/js/lib/moment-with-langs.min.js"></script>
-	<script src="../assets/js/lib/jquery.dataTables.min.js"></script>
-	<script src="../assets/js/lib/datatables.js"></script>
+	<script src="../assets/js/lib/jquery.dataTables.js"></script>
+	<script src="../assets/js/datatables.js"></script>
 	<script src="../assets/js/admin.js"></script>
 		<script type="text/javascript">
 		$(document).ready(function() {
 			IndigoAdmin.pageInit('http://fuel.localhost/');
-				$(IndigoAdmin).on('unityready', function() {
-		IndigoAdmin.displayNofitication('admin', 'Logged in successfully.', 'https://secure.gravatar.com/avatar/5c2d0d0b4cd3457db67aefcf03fd0d01?s=50');
-	});
+			$(IndigoAdmin).on('unityready', function() {
+				IndigoAdmin.displayNofitication('admin', 'Logged in successfully.', '');
+			});
 		});
 	</script>
 </body>
