Fixes WTF auto width

--- a/less/datatables.less
+++ b/less/datatables.less
@@ -22,17 +22,9 @@ table.table {
 	max-width: none !important;
 }
 
-// table.dataTable,
-// table.dataTable thead,
-// table.dataTable tfoot,
-// table.dataTable tbody,
-// table.dataTable td,
-// table.dataTable tr,
-// table.dataTable th {
-// 	-webkit-box-sizing: content-box !important;
-// 	-moz-box-sizing: content-box !important;
-// 	box-sizing: content-box !important;
-// }
+table.dataTable .form-control {
+	width: 100%;
+}
 
 table.table thead .sorting,
 table.table thead .sorting_asc,
