--- a/less/userstyle.less
+++ b/less/userstyle.less
@@ -255,6 +255,14 @@ div.dataTables_info {
 	img {
 		margin-right: 10px;
 	}
+
+	.theme-inner {
+		display: inline-block;
+
+		h3 {
+			margin-top: 0;
+		}
+	}
 }
 
 @media print {
@@ -267,5 +275,5 @@ div.dataTables_info {
 }
 
 .navbar-right:last-child {
-  margin-right: 0 !important;
+	margin-right: 0 !important;
 }
