Full package redesign

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,4 +1,4 @@
-@import "../bower_components/bootstrap/less/variables.less";
+@import "../../bower_components/bootstrap/less/variables.less";
 
 // @brand-primary:         #602ca8;
 // @brand-primary:         #6039ac;
