--- a/src/html/layout/footer.html
+++ b/src/html/layout/footer.html
@@ -6,6 +6,7 @@
 		</footer>
 	</div>
 
+	<script src="assets/js/lib/jquery.min.js"></script>
 	<script src="assets/js/lib/bootstrap.min.js"></script>
 
 </body>
