--- a/src/less/bootstrap/input-groups.less
+++ b/src/less/bootstrap/input-groups.less
@@ -1,4 +1,4 @@
-@import "../bower_components/bootstrap/less/input-groups.less";
+@import "../../../bower_components/bootstrap/less/input-groups.less";
 
 .input-group-btn {
 	.btn {
